      caused too many problems with legitimate UTF-8 tags. It can be
      re-enabled from Settings->Collection. (Many BRs)
    * Dynamic mode is now automatically disabled when replacing the playlist.
      (BR 214759)
    * The collection search filter now also searches for file names as a
      fallback. Patch by Andreas Hartmetz <ahartmetz@gmail.com>.

  BUGFIXES:
    * Fixed GUI freezing after mounting and during parse of media devices
      (BR 180520)
    * Fixed occasional crash when custom biases go awry. (BR 219888)
    * Fixed missing icons in the drag overlay menu.
    * More reliable MimeType detection for music formats. Patch by Rafał
      Rzepecki <divided.mind@gmail.com>. (BR 219792)
    * Fixed regression causing many scripted services, including the, shipped by
      default, LibriVox service to not work at all.
    * Fixed corner case that could prevent scans from being completed,
      manifesting as a regression in 2.2.1. Huge thanks to Christian
      Kreibichfor his patience and time in helping to debug this.
    * Fixed removing multiple tracks from a saved playlist only removing the first track.
      (BR 218527)
    * Fixed cancel button not responding when loading thumbnails in the cover 
      manager. (BR 204882)
    * Fixed crash when using the inline playlist editor to resize items containing
      auto sized elements not shown becuase of all space already being used.
      (BR 218167)
    * Fixed relative links in wikipedia work. (BR 218512)
    * Fixed multilevel playlist sorting by time since last played so it sorts
      numerically rather than alphabetically. (BR 214761)
    * Fixed crash with "Edit Track Details" dialog. (BR 217625)
    * Fixed a number of cases where markers such as "current track", "stop after 
      this track" and others would get shown in both group header and the first 
      track in the group. (BR 197842)
    * Fixed regression causing non default moodbar styles to not work.