@@ -19,6 +19,7 @@ VERSION 2.2.2
       fallback. Patch by Andreas Hartmetz <ahartmetz@gmail.com>.
 
   BUGFIXES:
+    * Fixed incorrect display of rich text in applet header text. (BR 220714)
     * Fixed GUI freezing after mounting and during parse of media devices
       (BR 180520)
     * Fixed occasional crash when custom biases go awry. (BR 219888)
